--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -58,6 +58,10 @@
 		<!-- Formulaire d'inscription -->
 		<form action="/register" th:object="${member}" method="post"
 			name="registerForm" class="space-y-6">
+			
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
+			
 
 			<div>
 				<label for="userName"
